fix long value overflow

--- a/app/assets/stylesheets/shared/observation_fields.scss
+++ b/app/assets/stylesheets/shared/observation_fields.scss
@@ -40,7 +40,7 @@
 .ObservationFieldValue {
   margin-bottom: 10px;
   overflow: hidden;
-  text-overflow: ellipsis;
+  contain: inline-size;
   .field {
     font-weight: 700;
     display: inline;
@@ -48,7 +48,10 @@
     cursor: pointer;
   }
   .value {
-    display: inline;
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     .dna {
       font-family: inherit;
     }
